--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Survey Form</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
 
   <body id="body">
